# ergodocs

./: .gitignore  .readthedocs.yaml  404.html  AGENTS.md  README.md  README.rst  archive.md  awesome-ergo.md  docs.ergoplatform.com_broken_links_2023-02-17-13-10.csv  docs.ergoplatform.com_broken_links_2023-02-21-11-51.csv  docs.ergoplatform.com_broken_links_2023-02-27-15-30.csv  docs.ergoplatform.com_errors_2023-02-17-13-10.csv  docs.ergoplatform.com_errors_2023-02-21-11-51.csv  docs.ergoplatform.com_errors_2023-02-27-15-30.csv  hooks.py  index.html  links.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  refs.bib  requirements.txt  run.sh  sitemap.xml  todo.md
.circleci/: config.yml
.github/: pull_request_template.md
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
assets/: extra.css
back-end/: index.html
dev/: index.html
docs/: .pages  6tx-testing.md  README.md  ai.md  archive.md  awesome-ergo.md  bot-faq.md  building-on-ergo-developers.md  contribute.md  crypto.md  devdao.md  documents.md  ecosystem-map.md  efyt.md  engage-with-the-ergo-community.md  ergo-foundation-2022.md  events.md  explanations.md  faq.md  fud-faq.md  getting-started-with-ergo.md  getting-started.md  gitcircles.md  glossary-by-path.md  glossary.md  howto.md  index.md  infradao.md  learn.md  merkle-proof.md  merkle-tree.md  notes.md  off-chain.md  operate-infrastructure.md  participate.md  partners.md  reference.md  references.md  (+15 more)
tools/mkdocs-breadcrumbs-plugin/: README.md  setup.cfg  setup.py
tools/mkdocs-breadcrumbs-plugin/src/mkdocs_breadcrumbs_plugin/: __init__.py  plugin.py
tools/mkdocs-pagetree-plugin/: README.md  setup.cfg  setup.py
tools/mkdocs-pagetree-plugin/src/mkdocs_pagetree_plugin/: __init__.py  plugin.py
tools/mkdocs-redirects/: README.md  setup.cfg  setup.py
tools/mkdocs-redirects/src/mkdocs_redirects/: __init__.py  plugin.py
(+1165 files in other folders)
