[metadata]
name = mkdocs-breadcrumbs-plugin
version = 0.2.0
description = Lightweight local breadcrumbs plugin for MkDocs Material
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Framework :: MkDocs
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    = src
install_requires =
    mkdocs>=1.5
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
mkdocs.plugins =
    breadcrumbs = mkdocs_breadcrumbs_plugin.plugin:BreadcrumbsPlugin
