[metadata]
name = mkdocs-redirects
version = 1.2.0
summary = Offline stub for MkDocs redirects plugin
license = MIT
classifiers =
    Framework :: MkDocs
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    = src
install_requires =
    mkdocs>=1.5
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
mkdocs.plugins =
    redirects = mkdocs_redirects.plugin:RedirectsPlugin
